<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation|screenSize|keyboardHidden">
<LinearLayout
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Hire For Audit"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="cursive"
        />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/inputEditText"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:saveEnabled="true"
            style="@style/editTextStyle"
            android:hint="Email address"
            android:textSize="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/inputEditText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/editTextStyle"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/roundedButton"
        android:layout_marginTop="5dp"
        android:text="Login"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        />


</LinearLayout>
</ScrollView>