<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <ImageView
        android:id="@+id/imgABC"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAccountants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

</LinearLayout>
</ScrollView>